2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.42 (tag v0.42)

2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Make ‘pg-set-client-encoding!’ also accept a symbol.

	* libpq.c (pg_set_client_encoding_x): If ENCODING
	is a symbol, convert it to a string internally.

2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Make ‘pq-print’ flush its output stream.

	* libpq.c (pg_print): Call ‘fflush’ right after calling ‘PQprint’.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.41 (tag v0.41)

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq doc] Fix bug: Include ‘pg-get-copy-data’ arg ‘async?’ in docstring.

	* libpq.c (pg_get_copy_data): Describe ‘asyncp’ in
	docstring; add docstring option to display it as "async?".

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq doc] Add "WILL BE REMOVED" to some docstrings.

	* libpq.c (pg_getline, pg_getlineasync):
	Mention planned retirement in docstring.

2011-09-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[types] Handle "hex format" for ‘bytea’ objectifier.

	* postgres-types.scm (bytea): In this db-col-type
	objectifier, if the input begins with "\x", take it to be in
	"hex format" and parse it appropriately.  For other input,
	fall back to the traditional "escape format" handling.

2011-09-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Spiff ‘pg-make-print-options’ doc comment.

	* libpq.c (pg_make_print_options): In doc comment,
	use @t around symbols and "---" to separate name from blurb.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) fluid: sql-quote-auto-E?

	* postgres-qcons.scm (sql-quote-auto-E?): New fluid, exported.
	(sql-quote): If ‘sql-quote-auto-E?’ is non-‘#f’ and there
	are one or more backslashes in the string, prefix an "E".

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use ‘zero?’ more.

	* postgres-gxrepl.scm (gxrepl -read): Use ‘zero?’.
	* postgres-resdisp.scm (display-result display-row): Likewise.
