@@ -1,3 +1,10 @@
+2012-01-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[pq int] Tweak implementation of 1.8+ C->Scheme conversion.
+
+	* libpq.c [!GI_LEVEL_NOT_YET_1_8] (_finangle): New static func.
+	[!GI_LEVEL_NOT_YET_1_8] (_FINANGLE): Use ‘_finangle’.
+
 2011-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Release: 0.42 (tag v0.42)
